--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --main-color: #5557a1
+}
+
+@font-face {
+  font-family: "VCR OSD Mono";
+  src: url(assets/fonts/VCR_OSD_MONO_1.001.ttf);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body, html {
+  font-family: "VCR OSD Mono", sans-serif;
+  color: var(--main-color);
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  width: auto;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+  color: var(--main-color);
+}
+
+a:hover {
+  text-decoration: underline;
+}
