Implemented authentication dialog jonander-upm/web-laiacano#2

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -8,9 +8,13 @@
     </ul>
   </nav>
   <nav class="nav-right">
-    <ul>
-      <li><a href="#">Login</a></li>
+    <ul *ngIf="!isAuthenticated()">
+      <li><a (click)="login()">Login</a></li>
       <li><a href="#">Register</a></li>
+    </ul>
+    <ul *ngIf="isAuthenticated()">
+      <li>Hi, {{username}}!</li>
+      <li><a (click)="logout()">Logout</a></li>
     </ul>
   </nav>
 </header>
