--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 :root {
-  --main-color: #5557a1
+  --main-color: #495195;
+  --base-color: #ffffff;
+  --hint-color: #c9c9c9;
 }
 
 @font-face {
@@ -12,10 +14,12 @@
 }
 
 body, html {
+  height: 100%;
   font-family: "VCR OSD Mono", sans-serif;
   color: var(--main-color);
   margin: 0;
   padding: 0;
+  background-color: var(--base-color);
 }
 
 img {
@@ -30,4 +34,90 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+/* DIALOGS */
+
+.auth-dialog>mat-dialog-container {
+  color: var(--main-color);
+  background-color: var(--main-color);
+  padding: 5px;
+  border-radius: 8px;
+}
+
+.auth-dialog>mat-dialog-container>:first-child {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.auth-dialog>mat-dialog-container .mat-dialog-title {
+  font-size: large;
+  color: var(--base-color);
+  margin-bottom: 0;
+}
+
+.mat-dialog-header {
+  display: flex;
+  align-items: center;
+  padding: 0px 0px 0px 10px;
+}
+
+.mat-dialog-header>button {
+  margin-left: auto;
+  height: 20px;
+  width: 20px;
+  font-size: smaller;
+  line-height: 0;
+  background-color: var(--base-color);
+}
+
+.mat-dialog-body {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: var(--base-color);
+  border-radius: 6px;
+  padding: 50px 30px 30px 30px;
+}
+
+.mat-dialog-body * {
+  color: var(--main-color);
+
+}
+
+.mat-dialog-body>.mat-dialog-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.mat-form-field-flex, .mat-form-field>.mat-input-element {
+  caret-color: var(--main-color) !important;
+  height: 50px;
+}
+
+.mat-form-field-infix {
+  display: flex;
+  padding: 5px !important;
+}
+
+.mat-form-field-suffix>.mat-icon {
+  color: var(--hint-color);
+}
+
+.mat-form-field-outline-start, .mat-form-field-outline-end, .mat-form-field-outline-gap {
+  border-width: 3px !important;
+}
+
+.mat-dialog-actions {
+  display: flex;
+  justify-content: space-around;
+  margin-top: auto;
+}
+
+.mat-dialog-actions>button {
+  border-style: solid;
+  border-color: var(--main-color);
+  border-width: 3px 3px 4px 3px;
 }
