--- a/src/app/shared/dialogs/login-dialog/login-dialog.component.html
+++ b/src/app/shared/dialogs/login-dialog/login-dialog.component.html
@@ -17,7 +17,7 @@
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button (click)="login()" mat-button>Login</button>
+    <button (click)="login()" mat-button>>Login</button>
   </mat-dialog-actions>
 </div>
 
