Applied pattern validation constraint to registration password jonander-upm/web-laiacano#8

--- a/src/styles.css
+++ b/src/styles.css
@@ -130,6 +130,10 @@ a:hover {
   border-color: var(--hint-color);
 }
 
+.mat-form-field:has(.mat-hint) {
+  padding-bottom: 23px;
+}
+
 .mat-hint {
   color: var(--hint-color);
 }
