--- a/src/app/shared/dialogs/register-dialog/register-dialog.component.html
+++ b/src/app/shared/dialogs/register-dialog/register-dialog.component.html
@@ -50,7 +50,7 @@
     <lc-button
       [buttonText]="registerButtonText"
       [disabled]="!registrationForm.valid"
-      (click)="register()">
+      (clickEvent)="register()">
     </lc-button>
   </mat-dialog-actions>
 </div>
