--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -3,3 +3,4 @@
   <span>The main page is currently under development</span>
   <span>Sorry for the inconvenience</span>
 </div>
+<router-outlet></router-outlet>
