--- a/src/app/shared/dialogs/login-dialog/login-dialog.component.html
+++ b/src/app/shared/dialogs/login-dialog/login-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="mat-dialog-header">
   <span mat-dialog-title>Login</span>
   <button mat-button mat-icon-button aria-label="Close dialog" mat-dialog-close="">
-    X
+    <mat-icon>close</mat-icon>
   </button>
 </div>
 <div class="mat-dialog-body">
@@ -11,20 +11,23 @@
               [fieldSize]="'responsive'"
               [parentFormGroup]="loginForm"
               [formControlName]="'username'"></lc-input>
-    <lc-input label='Password'
-              [(content)]="password"
-              [password]="true"
-              [fieldSize]="'responsive'"
-              [parentFormGroup]="loginForm"
-              [formControlName]="'password'"></lc-input>
-    <a class="forgot-password-link"
-       (click)="forgotPassword()"
-       [ngClass]="{ disabled: !username }">
-      Did you forget your password?
-    </a>
+    <div>
+      <lc-input label='Password'
+                [(content)]="password"
+                [password]="true"
+                [fieldSize]="'responsive'"
+                [parentFormGroup]="loginForm"
+                [formControlName]="'password'"></lc-input>
+      <div *ngIf="loginError && username" class="forgot-password-wrapper">
+        <a class="forgot-password-link"
+           (click)="forgotPassword()">
+          Did you forget your password?
+        </a>
+      </div>
+    </div>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <lc-button [buttonText]="loginButtonText" [buttonSize]="'medium'" (clickEvent)="login()"></lc-button>
+    <lc-button [disabled]="!loginForm.valid" [buttonText]="loginButtonText" [buttonSize]="'medium'" (clickEvent)="login()"></lc-button>
   </mat-dialog-actions>
 </div>
 
