--- a/src/app/shared/dialogs/register-dialog/register-dialog.component.html
+++ b/src/app/shared/dialogs/register-dialog/register-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="mat-dialog-header">
   <span mat-dialog-title>Register</span>
   <button mat-button mat-icon-button aria-label="Close dialog" mat-dialog-close="">
-    X
+    <mat-icon>close</mat-icon>
   </button>
 </div>
 <div class="mat-dialog-body">
