--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -13,19 +13,19 @@
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 
 $fontConfig: (
-  display-4: mat.define-typography-level(112px, 112px, 300, 'VCR OSD Mono', -0.0134em),
-  display-3: mat.define-typography-level(56px, 56px, 400, 'VCR OSD Mono', -0.0089em),
-  display-2: mat.define-typography-level(45px, 48px, 400, 'VCR OSD Mono', 0.0000em),
-  display-1: mat.define-typography-level(34px, 40px, 400, 'VCR OSD Mono', 0.0074em),
-  headline: mat.define-typography-level(24px, 32px, 400, 'VCR OSD Mono', 0.0000em),
-  title: mat.define-typography-level(20px, 32px, 500, 'VCR OSD Mono', 0.0075em),
-  subheading-2: mat.define-typography-level(16px, 28px, 400, 'VCR OSD Mono', 0.0094em),
-  subheading-1: mat.define-typography-level(15px, 24px, 500, 'VCR OSD Mono', 0.0067em),
-  body-2: mat.define-typography-level(14px, 24px, 500, 'VCR OSD Mono', 0.0179em),
-  body-1: mat.define-typography-level(14px, 20px, 400, 'VCR OSD Mono', 0.0179em),
-  button: mat.define-typography-level(14px, 14px, 500, 'VCR OSD Mono', 0.0893em),
-  caption: mat.define-typography-level(12px, 20px, 400, 'VCR OSD Mono', 0.0333em),
-  input: mat.define-typography-level(inherit, 1.125, 400, 'VCR OSD Mono', 1.5px)
+  display-4: mat.define-typography-level(112px, 112px, 300, 'Varela Round', -0.0134em),
+  display-3: mat.define-typography-level(56px, 56px, 400, 'Varela Round', -0.0089em),
+  display-2: mat.define-typography-level(45px, 48px, 400, 'Varela Round', 0.0000em),
+  display-1: mat.define-typography-level(34px, 40px, 400, 'Varela Round', 0.0074em),
+  headline: mat.define-typography-level(24px, 32px, 400, 'Varela Round', 0.0000em),
+  title: mat.define-typography-level(20px, 32px, 500, 'Varela Round', 0.0075em),
+  subheading-2: mat.define-typography-level(16px, 28px, 400, 'Varela Round', 0.0094em),
+  subheading-1: mat.define-typography-level(15px, 24px, 500, 'Varela Round', 0.0067em),
+  body-2: mat.define-typography-level(14px, 24px, 500, 'Varela Round', 0.0179em),
+  body-1: mat.define-typography-level(14px, 20px, 400, 'Varela Round', 0.0179em),
+  button: mat.define-typography-level(14px, 14px, 500, 'Varela Round', 0.0893em),
+  caption: mat.define-typography-level(12px, 20px, 400, 'Varela Round', 0.0333em),
+  input: mat.define-typography-level(inherit, 1.125, 400, 'Varela Round', 1.5px)
 );
 
 // Foreground Elements
@@ -256,6 +256,6 @@ $altTheme: (
   font-size: 24px;
   font-family: 'Material Icons', 'Material Icons', sans-serif;
   .mat-badge-content {
-    font-family: 'VCR OSD Mono', sans-serif;
+    font-family: 'Varela Round', sans-serif;
   }
 }
