--- a/src/app/shared/components/lc-link-button/lc-link-button.component.html
+++ b/src/app/shared/components/lc-link-button/lc-link-button.component.html
@@ -1,4 +1,4 @@
-<a class="btn--{{ buttonSize }}"
+<a class="btn--{{ size }}"
    [ngClass]="{'disabled': disabled}"
    [routerLink]="!disabled ? hrefLink : ''"
    (click)="btnClick.emit()">
