--- a/src/app/shared/dialogs/login-dialog/login-dialog.component.html
+++ b/src/app/shared/dialogs/login-dialog/login-dialog.component.html
@@ -27,7 +27,7 @@
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <lc-button [disabled]="!loginForm.valid" [buttonText]="loginButtonText" [buttonSize]="'medium'" (clickEvent)="login()"></lc-button>
+    <lc-button [disabled]="!loginForm.valid" [text]="loginButtonText" [size]="'medium'" (clickEvent)="login()"></lc-button>
   </mat-dialog-actions>
 </div>
 
