--- a/src/app/shared/dialogs/register-dialog/register-dialog.component.html
+++ b/src/app/shared/dialogs/register-dialog/register-dialog.component.html
@@ -48,7 +48,7 @@
   </mat-dialog-content>
   <mat-dialog-actions>
     <lc-button
-      [buttonText]="registerButtonText"
+      [text]="registerButtonText"
       [disabled]="!registrationForm.valid"
       (clickEvent)="register()">
     </lc-button>
