--- a/src/app/shared/dialogs/reset-password-dialog/reset-password-dialog.component.html
+++ b/src/app/shared/dialogs/reset-password-dialog/reset-password-dialog.component.html
@@ -30,10 +30,10 @@
   </mat-dialog-content>
   <mat-dialog-actions>
     <lc-button
-      [buttonText]="resetPasswordButtonText"
+      [text]="resetPasswordButtonText"
       [disabled]="!resetPasswordForm.valid"
       (clickEvent)="resetPassword()"
-      buttonSize="large"
+      size="large"
     >
     </lc-button>
   </mat-dialog-actions>
