Implement image view dialog jonander-upm/web-laiacano#29

--- a/src/app/shared/components/lc-item-section/lc-item-section.component.html
+++ b/src/app/shared/components/lc-item-section/lc-item-section.component.html
@@ -13,7 +13,7 @@
     <img
       class="rounded-sm max-h-full grayscale"
       [ngClass]="{ 'group-hover:opacity-80 transition-opacity': clickableImg}"
-      src="https://picsum.photos/800/600"
+      [src]="imageSrc"
       alt="Pic"
       [style.opacity]="opacityFraction"/>
   </div>
