--- a/src/styles.css
+++ b/src/styles.css
@@ -57,6 +57,10 @@ a.disabled a.disabled:hover {
   border-radius: 47px;
 }
 
+.img-view-dialog>mat-dialog-container {
+  padding: 0;
+}
+
 .auth-dialog>mat-dialog-container>:first-child {
   display: flex;
   flex-direction: column;
