--- a/src/app/shared/components/lc-item-section/lc-item-section.component.html
+++ b/src/app/shared/components/lc-item-section/lc-item-section.component.html
@@ -29,6 +29,7 @@
       class="w-fit"
       [text]="buttonText" color="primary"
       [icon]="buttonIcon"
+      [disabled]="buttonDisabled"
       (clickEvent)="buttonClick.emit()">
     </lc-button>
   </div>
