--- a/src/app/shared/components/lc-subheader/lc-subheader.component.html
+++ b/src/app/shared/components/lc-subheader/lc-subheader.component.html
@@ -1,9 +1,21 @@
-<div class="flex justify-between items-end h-subheader px-page pb-10 rounded-b-md shadow-toolbarBottom">
-  <span class="text-6xl">{{ title }}</span>
-  <lc-button
-    *ngIf="filterData"
-    class="h-fit w-fit"
-    size="small"
-    color="secondary"
-    icon="filter_alt"></lc-button>
+<div
+  class="flex flex-col h-subheader px-page py-10 rounded-b-md shadow-toolbarBottom transition-height"
+  [ngClass]="{ 'h-subheaderFilters': showFilters }"
+>
+  <div class="flex justify-between items-end">
+    <span class="text-6xl">{{ title }}</span>
+    <lc-button
+      *ngIf="hasFilters"
+      class="h-fit w-fit"
+      size="small"
+      color="secondary"
+      icon="filter_alt"
+      [toggled]="showFilters"
+      (clickEvent)="toggleFilters()"
+    ></lc-button>
+  </div>
+  <lc-filter-section
+    *ngIf="showFilters"
+    class="h-filter"
+  ></lc-filter-section>
 </div>
