--- a/src/app/shared/components/lc-button/lc-button.component.html
+++ b/src/app/shared/components/lc-button/lc-button.component.html
@@ -1,13 +1,17 @@
-<button class="flex items-center justify-center gap-4 btn--{{ size }} color--{{ color }} text-center group"
-        (click)="btnClick()"
-        [disabled]="disabled"
+<button
+    class="flex items-center justify-center gap-4 btn--{{ size }} color--{{ color }} text-center group"
+    [ngClass]="{ 'toggled': toggled }"
+    (click)="btnClick()"
+    [disabled]="disabled"
 >
   {{text}}
   <mat-icon
     *ngIf="icon"
     [ngClass]="{
-      'text-main group-hover:text-basic': color === 'secondary',
-      'text-basic group-hover:text-main': color === 'primary'
+      'text-main group-hover:text-basic': color === 'secondary' && !toggled,
+      '!text-basic': color === 'secondary' && toggled,
+      'text-basic group-hover:text-main': color === 'primary' && !toggled,
+      '!text-main': color === 'primary' && toggled
     }"
   >
     {{ icon }}
