Implement Dropdown Section component jonander-upm/web-laiacano#48

--- a/src/app/shared/components/lc-subheader/lc-subheader.component.html
+++ b/src/app/shared/components/lc-subheader/lc-subheader.component.html
@@ -15,7 +15,6 @@
     ></lc-button>
   </div>
   <lc-filter-section
-    *ngIf="showFilters"
-    class="h-filter"
+    class="h-filter overflow-hidden"
   ></lc-filter-section>
 </div>
