Implement shopping cart page base jonander-upm/web-laiacano#44

--- a/src/app/shared/components/lc-dropdown-section/lc-dropdown-section-content/lc-dropdown-section-content.component.html
+++ b/src/app/shared/components/lc-dropdown-section/lc-dropdown-section-content/lc-dropdown-section-content.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full bg-basicDarker overflow-hidden shadow-sectionTopBottom"
+  class="w-full bg-basic overflow-hidden shadow-sectionTopBottom"
   [ngClass]="{
     'h-0 max-h-0 border-b-2 border-basicDarker': !showContent,
     'h-fit px-10 py-5': showContent
